--- a/css/style.css
+++ b/css/style.css
@@ -1496,15 +1496,15 @@ p {
 }
 
 .footer .footer-social-list a {
-  border: 1px solid #d9dee5;
-  height: 40px;
-  width: 40px;
+  border: 2px solid #fff;
+  height: 50px;
+  width: 50px;
   display: inline-block;
   border-radius: 50%;
-  line-height: 38px;
+  line-height: 48px;
   text-align: center;
-  color: #bbc3d0;
-  font-size: 18px;
+  color: #fff;
+  font-size: 29px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
@@ -1878,4 +1878,34 @@ ul.social-list li a {
 ul.social-list li a:hover {
     opacity: 1;
     color:#fff;
+}
+
+p.lead.text-center {
+    color: white;
+    line-height: 25px;
+}
+img.img-fluid.event-page.d-block.mx-auto{
+    max-width: 100%;
+    height: 304px;
+}
+
+time.content-date {
+    font-weight: 800;
+    padding-right: 10px;
+}
+span.content-duration {
+    padding-left: 10px;
+}
+
+a.btn.btn-warning.play-btn {
+    border-radius: 0px;
+    margin-top: 10px;
+    padding: 6px 34px 6px 34px;
+}
+img.cover-img{
+    height: 200px;
+    width: 300px;
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
